增加了简体中文本土化的语言包Localization is in progress.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -496,6 +496,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Resources.zh-Hans.resx" />
     <EmbeddedResource Include="UI\ClickableText\ClickableTextResource.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
