--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -48,7 +48,11 @@
   <ItemGroup>
     <Compile Include="Antlr\Prompt\PromptParser.cs" />
     <Compile Include="BLogic\AddLineNumbersMode.cs" />
+    <Compile Include="BLogic\Content\ChatContentTypeEnum.cs" />
+    <Compile Include="BLogic\ChatOptions.cs" />
     <Compile Include="BLogic\Context\Item\SimpleTextChatContextItem.cs" />
+    <Compile Include="BLogic\Content\IChatContent.cs" />
+    <Compile Include="BLogic\Reader\LLMReaderPool.cs" />
     <Compile Include="Commands\ApplySupportCommand.cs" />
     <Compile Include="Commands\File\AddFilesToContextCommand.cs" />
     <Compile Include="Commands\File\ApplyFileSupportCommand.cs" />
@@ -216,14 +220,15 @@
     <Compile Include="UI\CodeLens\ViewElementFactory.cs" />
     <Compile Include="UI\CombinedParameterConverter.cs" />
     <Compile Include="UI\Converters.cs" />
+    <Compile Include="UI\Dialog\Content\PromptDialogContent.cs" />
     <Compile Include="UI\Dialog\DialogContent.cs" />
-    <Compile Include="UI\Dialog\DialogContentTypeEnum.cs" />
     <Compile Include="UI\Dialog\DialogControl.xaml.cs">
       <DependentUpon>DialogControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Dialog\DialogTemplateSelector.cs" />
-    <Compile Include="UI\Dialog\ReplicContent.cs" />
-    <Compile Include="UI\Dialog\ToolCallContent.cs" />
+    <Compile Include="BLogic\Reader\LLMReader.cs" />
+    <Compile Include="UI\Dialog\Content\AnswerDialogContent.cs" />
+    <Compile Include="UI\Dialog\Content\ToolCallDialogContent.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\CommandAnswerPart.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\IParsedPart.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\Parsed.cs" />
