--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -48,8 +48,10 @@
   <ItemGroup>
     <Compile Include="Antlr\Prompt\PromptParser.cs" />
     <Compile Include="BLogic\AddLineNumbersMode.cs" />
+    <Compile Include="BLogic\Content\AnswerChatContent.cs" />
     <Compile Include="BLogic\Content\ChatContentTypeEnum.cs" />
     <Compile Include="BLogic\ChatOptions.cs" />
+    <Compile Include="BLogic\Content\ToolCallChatContent.cs" />
     <Compile Include="BLogic\Context\Item\SimpleTextChatContextItem.cs" />
     <Compile Include="BLogic\Content\IChatContent.cs" />
     <Compile Include="BLogic\Reader\LLMReaderPool.cs" />
