--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Commands\Other\OpenPropertiesCommand.cs" />
     <Compile Include="Commands\Other\OpenActivityLogCommand.cs" />
     <Compile Include="Commands\Other\OpenProxyLogCommand.cs" />
+    <Compile Include="Commands\Other\ResetMCPToolsCommand.cs" />
     <Compile Include="Commands\ShowInSituChatCommand.cs" />
     <Compile Include="Helper\ActivityLogHelper.cs" />
     <Compile Include="Helper\DisposeHelper.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="Options\FontSizeProxy.cs" />
     <Compile Include="Options\InternalPage.cs" />
     <Compile Include="Options2\JsonDescriptionCommentConverter.cs" />
+    <Compile Include="Options\MCPToolsExecutionStatus.cs" />
     <Compile Include="Options\OptionsProvider.cs" />
     <Compile Include="Options\UIPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
