Prototyped ReplaceDocumentBodyTool diff apply.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -64,8 +64,12 @@
     <Compile Include="Commands\Other\ResetMCPToolsCommand.cs" />
     <Compile Include="Commands\ShowInSituChatCommand.cs" />
     <Compile Include="Helper\ActivityLogHelper.cs" />
+    <Compile Include="Helper\ChatToolHelper.cs" />
     <Compile Include="Helper\DisposeHelper.cs" />
+    <Compile Include="Helper\Frame\DifferenceWindowFrameWrapper.cs" />
+    <Compile Include="Helper\Frame\WindowFrameWrapper.cs" />
     <Compile Include="Helper\KnownMonikersHelper.cs" />
+    <Compile Include="Helper\TempFile.cs" />
     <Compile Include="Helper\TimeoutEventProxy.cs" />
     <Compile Include="Helper\UriHelper.cs" />
     <Compile Include="Options2\Agent\AgentJson.cs" />
@@ -225,6 +229,10 @@
     <Compile Include="UI\CombinedParameterConverter.cs" />
     <Compile Include="UI\Converters.cs" />
     <Compile Include="UI\Dialog\Content\PromptDialogContent.cs" />
+    <Compile Include="UI\Dialog\Content\Tools\ToolControlFactory.cs" />
+    <Compile Include="UI\Dialog\Content\Tools\VisualStudio_ReplaceDocumentBody_UserControl.xaml.cs">
+      <DependentUpon>VisualStudio_ReplaceDocumentBody_UserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Dialog\DialogContent.cs" />
     <Compile Include="UI\Dialog\DialogControl.xaml.cs">
       <DependentUpon>DialogControl.xaml</DependentUpon>
@@ -233,6 +241,7 @@
     <Compile Include="BLogic\Reader\LLMReader.cs" />
     <Compile Include="UI\Dialog\Content\AnswerDialogContent.cs" />
     <Compile Include="UI\Dialog\Content\ToolCallDialogContent.cs" />
+    <Compile Include="UI\Difference\DifferenceShower.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\CommandAnswerPart.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\IParsedPart.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\Parsed.cs" />
@@ -468,6 +477,10 @@
     <Page Include="UI\CodeLens\CodeLenseUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\Dialog\Content\Tools\VisualStudio_ReplaceDocumentBody_UserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Dialog\DialogControl.xaml">
       <Generator>MSBuild:Compile</Generator>
