--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,7 +18,7 @@
     <PackageVersion Include="JsonPath.Net" Version="2.1.1" />
     <PackageVersion Include="MessagePack" Version="3.1.4" />
     <PackageVersion Include="Microsoft.AspNetCore.WebUtilities" Version="2.3.0" />
-    <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.EditorFeatures.Wpf" Version="2.8.2" />
@@ -34,6 +34,7 @@
     <PackageVersion Include="Microsoft.VSSDK.BuildTools" Version="17.14.2094" />
     <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageVersion Include="ModelContextProtocol" Version="0.3.0-preview.3" />
+    <PackageVersion Include="NAudio" Version="2.2.1" />
     <PackageVersion Include="NuGet.VisualStudio" Version="17.14.0" />
     <PackageVersion Include="PuppeteerSharp" Version="20.2.2" />
     <PackageVersion Include="RunProcessAsTask" Version="1.2.4" />
@@ -46,5 +47,7 @@
     <PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
     <PackageVersion Include="System.Net.ServerSentEvents" Version="9.0.0" />
     <PackageVersion Include="System.Text.Json" Version="9.0.0" />
+    <PackageVersion Include="Whisper.net" Version="1.7.4" />
+    <PackageVersion Include="Whisper.net.Runtime" Version="1.7.4" />
   </ItemGroup>
 </Project>
