--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -32,6 +32,7 @@
     <PackageVersion Include="Microsoft.VisualStudio.TeamFoundation.Git.Extensibility" Version="17.0.32322.3" />
     <PackageVersion Include="Microsoft.VisualStudio.Text.Logic" Version="17.14.249" />
     <PackageVersion Include="Microsoft.VSSDK.BuildTools" Version="17.14.2094" />
+    <PackageVersion Include="Microsoft.Windows.SDK.Contracts" Version="10.0.26100.4948" />
     <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageVersion Include="ModelContextProtocol" Version="0.3.0-preview.3" />
     <PackageVersion Include="NAudio" Version="2.2.1" />
@@ -46,6 +47,7 @@
     <PackageVersion Include="System.Management" Version="10.0.0-preview.4.25258.110" />
     <PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
     <PackageVersion Include="System.Net.ServerSentEvents" Version="9.0.0" />
+    <PackageVersion Include="System.Speech" Version="9.0.8" />
     <PackageVersion Include="System.Text.Json" Version="9.0.0" />
     <PackageVersion Include="Whisper.net" Version="1.7.4" />
     <PackageVersion Include="Whisper.net.Runtime" Version="1.7.4" />
