Fixed the file's tree.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -48,13 +48,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Antlr\Prompt\PromptParser.cs" />
-    <Compile Include="BLogic\AddLineNumbersMode.cs" />
-    <Compile Include="BLogic\Content\AnswerChatContent.cs" />
-    <Compile Include="BLogic\Content\ChatContentTypeEnum.cs" />
-    <Compile Include="BLogic\ChatOptions.cs" />
-    <Compile Include="BLogic\Content\ToolCallChatContent.cs" />
-    <Compile Include="BLogic\Context\Item\SimpleTextChatContextItem.cs" />
-    <Compile Include="BLogic\Content\IChatContent.cs" />
+    <Compile Include="Chat\AddLineNumbersMode.cs" />
+    <Compile Include="Chat\Content\AnswerChatContent.cs" />
+    <Compile Include="Chat\Content\ChatContentTypeEnum.cs" />
+    <Compile Include="Chat\ChatOptions.cs" />
+    <Compile Include="Chat\Content\ToolCallChatContent.cs" />
+    <Compile Include="Chat\Context\Item\SimpleTextChatContextItem.cs" />
+    <Compile Include="Chat\Content\IChatContent.cs" />
     <Compile Include="BLogic\Reader\LLMReaderPool.cs" />
     <Compile Include="BLogic\RecorderTranscriberPostProcessor.cs" />
     <Compile Include="Commands\ApplySupportCommand.cs" />
@@ -83,27 +83,27 @@
     <Compile Include="Antlr\Context\ContextParser.cs" />
     <Compile Include="Antlr\IParser.cs" />
     <Compile Include="Antlr\MarkdownListener.cs" />
-    <Compile Include="BLogic\Chat.cs" />
-    <Compile Include="BLogic\ChatContainer.cs" />
-    <Compile Include="BLogic\ChatDescription.cs" />
-    <Compile Include="BLogic\ChatHelper.cs" />
-    <Compile Include="BLogic\ChatStatusEnum.cs" />
+    <Compile Include="Chat\Chat.cs" />
+    <Compile Include="Chat\ChatContainer.cs" />
+    <Compile Include="Chat\ChatDescription.cs" />
+    <Compile Include="Chat\ChatHelper.cs" />
+    <Compile Include="Chat\ChatStatusEnum.cs" />
     <Compile Include="Commands\Other\OpenBuildingNaturalLanguageOutlinesWindowCommand.cs" />
     <Compile Include="Embedding\EmbeddingGenerator.cs" />
     <Compile Include="Embedding\Json\Objects.cs" />
     <Compile Include="Find\DoSearch.cs" />
     <Compile Include="Git\CommitMessageBuilder.cs" />
     <Compile Include="BLogic\CompletionProposal.cs" />
-    <Compile Include="BLogic\Context\ChatContext.cs" />
-    <Compile Include="BLogic\Context\ChatContextEventArgs.cs" />
-    <Compile Include="BLogic\Context\ChatContextItemHelper.cs" />
-    <Compile Include="BLogic\Context\Composer\CSharpContextComposer.cs" />
-    <Compile Include="BLogic\Context\Composer\ContextComposeResult.cs" />
-    <Compile Include="BLogic\Context\Composer\ContextSelectedIdentifier.cs" />
-    <Compile Include="BLogic\Context\Composer\TypeReferenceWalker.cs" />
-    <Compile Include="BLogic\Context\IChatContextItem.cs" />
-    <Compile Include="BLogic\Context\Item\CustomFileChatContextItem.cs" />
-    <Compile Include="BLogic\Context\Item\SolutionItemChatContextItem.cs" />
+    <Compile Include="Chat\Context\ChatContext.cs" />
+    <Compile Include="Chat\Context\ChatContextEventArgs.cs" />
+    <Compile Include="Chat\Context\ChatContextItemHelper.cs" />
+    <Compile Include="Chat\Context\Composer\CSharpContextComposer.cs" />
+    <Compile Include="Chat\Context\Composer\ContextComposeResult.cs" />
+    <Compile Include="Chat\Context\Composer\ContextSelectedIdentifier.cs" />
+    <Compile Include="Chat\Context\Composer\TypeReferenceWalker.cs" />
+    <Compile Include="Chat\Context\IChatContextItem.cs" />
+    <Compile Include="Chat\Context\Item\CustomFileChatContextItem.cs" />
+    <Compile Include="Chat\Context\Item\SolutionItemChatContextItem.cs" />
     <Compile Include="BuildErrors\BuildResultProvider.cs" />
     <Compile Include="Commands\BuildError\BuildErrorWindowFixErrorCommand.cs" />
     <Compile Include="BuildErrors\BuildResultInformation.cs" />
@@ -134,7 +134,7 @@
     <Compile Include="Helper\NaturalLanguageHelper.cs" />
     <Compile Include="Helper\OpenAIHelper.cs" />
     <Compile Include="Helper\ProcessHelper.cs" />
-    <Compile Include="BLogic\TextDescriptor.cs" />
+    <Compile Include="Chat\TextDescriptor.cs" />
     <Compile Include="CodeLens\CodeLensConnectionHandler.cs" />
     <Compile Include="CodeLens\CodeLensListener.cs" />
     <Compile Include="Commands\Other\ChooseModelCommand.cs" />
@@ -155,7 +155,7 @@
     <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\LanguageHelper.cs" />
     <Compile Include="Helper\LineEndingHelper.cs" />
-    <Compile Include="BLogic\UserPrompt.cs" />
+    <Compile Include="Chat\UserPrompt.cs" />
     <Compile Include="Helper\RoslynDocumentHelper.cs" />
     <Compile Include="Helper\SuggestionHijackHelper.cs" />
     <Compile Include="Helper\WorkspaceHelper.cs" />
