Fixed the file's tree. N2

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -66,16 +66,16 @@
     <Compile Include="Commands\Other\ResetMCPToolsCommand.cs" />
     <Compile Include="Commands\ShowInSituChatCommand.cs" />
     <Compile Include="Helper\ActivityLogHelper.cs" />
-    <Compile Include="Helper\AsyncAwaitProduct.cs" />
-    <Compile Include="Helper\AsyncAwaitProductionCycle.cs" />
-    <Compile Include="Helper\CallAwaiter.cs" />
+    <Compile Include="BLogic\AsyncAwaitProduct.cs" />
+    <Compile Include="BLogic\AsyncAwaitProductionCycle.cs" />
+    <Compile Include="BLogic\CallAwaiter.cs" />
     <Compile Include="Helper\ChatToolHelper.cs" />
     <Compile Include="Helper\DirectOrEnvStringHelper.cs" />
     <Compile Include="Helper\DisposeHelper.cs" />
     <Compile Include="Helper\KnownMonikersHelper.cs" />
-    <Compile Include="Helper\NonDisposableSemaphoreSlim.cs" />
-    <Compile Include="Helper\TempFile.cs" />
-    <Compile Include="Helper\TimeoutEventProxy.cs" />
+    <Compile Include="BLogic\NonDisposableSemaphoreSlim.cs" />
+    <Compile Include="BLogic\TempFile.cs" />
+    <Compile Include="BLogic\TimeoutEventProxy.cs" />
     <Compile Include="Helper\UriHelper.cs" />
     <Compile Include="Helper\WindowHelper.cs" />
     <Compile Include="Options2\Agent\AgentJson.cs" />
@@ -191,7 +191,7 @@
     <Compile Include="NLOutline\Tree\OutlineNode.cs" />
     <Compile Include="Options2\FreeAIrOptions.cs" />
     <Compile Include="Options2\Mcp\McpServersJson.cs" />
-    <Compile Include="Helper\DataPieceCache.cs" />
+    <Compile Include="BLogic\DataPieceCache.cs" />
     <Compile Include="Options2\Support\Context.cs" />
     <Compile Include="Options2\Support\StringEnumConverter.cs" />
     <Compile Include="Options2\Support\SupportCollectionJson.cs" />
